fixes img stretching

--- a/project.css
+++ b/project.css
@@ -16,10 +16,12 @@
 .project img{
     max-width: 100%;
     margin: 15px 0;
+    align-self: flex-start;
 }
 .project img.mini{
     max-width: 45%;
     display: inline-block;
+    align-self: flex-start;
 }
 .bg{
     background-image:url('assets/projects/ir/ir1.png');
